--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -583,7 +583,7 @@ h6 {
   outline: none;
 }
 
-.footer .footer-newsletter .newsletter-form input[type=submit] {
+.footer .footer-newsletter .newsletter-form input[type=button] {
   border: 0;
   font-size: 16px;
   padding: 0 20px;
@@ -594,7 +594,7 @@ h6 {
   border-radius: 0 4px 4px 0;
 }
 
-.footer .footer-newsletter .newsletter-form input[type=submit]:hover {
+.footer .footer-newsletter .newsletter-form input[type=button]:hover {
   background: color-mix(in srgb, var(--accent-color), transparent 20%);
 }
 
@@ -1744,7 +1744,7 @@ section,
   color: color-mix(in srgb, var(--default-color), transparent 70%);
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .php-email-form button[type=button] {
   color: var(--contrast-color);
   background: var(--accent-color);
   border: 0;
@@ -1753,7 +1753,7 @@ section,
   border-radius: 50px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .php-email-form button[type=button]:hover {
   background: color-mix(in srgb, var(--accent-color), transparent 25%);
 }
 
